<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_one"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edit_one"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_40"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_10"
                android:background="@drawable/edit_text"
                android:hint="@string/edit_input"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_two"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edit_two"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_40"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_10"
                android:background="@drawable/edit_text"
                android:hint="@string/edit_input"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>