<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/title_layout"
            layout="@layout/activity_base_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_35"
                android:layout_weight="0.6"
                android:layout_margin="@dimen/dp_5"
                android:padding="@dimen/dp_5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:drawableRight="@drawable/search"
                android:background="@drawable/edit_text"
                android:hint="@string/edit_search" />

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_35"
                android:layout_weight="0.08"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:padding="@dimen/dp_5"
                android:background="@drawable/selector_btn"
                android:src="@drawable/add"
                />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_35"
                android:layout_weight="0.16"
                android:layout_margin="@dimen/dp_4"
                android:padding="@dimen/dp_5"
                android:background="@drawable/selector_btn"
                android:textColor="@color/colorWhite"
                android:text="@string/tv_clear"/>

            <Button
                android:id="@+id/btn_output"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_35"
                android:layout_weight="0.16"
                android:layout_margin="@dimen/dp_4"
                android:padding="@dimen/dp_5"
                android:background="@drawable/selector_btn"
                android:textColor="@color/colorWhite"
                android:text="@string/tv_output"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorGrey_300"/>

        <include
            layout="@layout/list_data"
            android:id="@+id/table_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorGrey_300"/>

        <ListView
            android:id="@+id/list_data"
            android:divider="@color/colorGrey_300"
            android:dividerHeight="@dimen/dp_1"
            android:scrollbars="vertical"
            android:cacheColorHint="@android:color/transparent"
            android:fadingEdge="none"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ListView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorGrey_300"/>
    </LinearLayout>
</RelativeLayout>